--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250108123017">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250108153203">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,84 +36,36 @@
 			</div>
 		</header>
 		<main class="page">
-			<section class="page__hero hero">
+			<section data-watch class="page__hero hero">
 				<div class="hero__container">
 					<div class="hero__body">
-						<h1 data-watch class="hero__title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
+						<div class="hero__title-item">
+							<h1 class="hero__title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
+						</div>
 						<div class="hero__media">
-							<svg data-watch-once class="hero__figure" viewBox="0 0 197 197.091" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<path id="vector-1" d="M197 23.27C197 23.27 84.51 -29.09 17.46 23.27C-49.58 75.63 94.4 273.23 145.7 165.38C197 57.53 197 23.27 197 23.27Z" fill="#63847F" fill-opacity="1.000000" fill-rule="evenodd" />
-								<path id="vector-1" d="M17.46 23.27C-49.58 75.63 94.4 273.23 145.7 165.38C197 57.53 197 23.27 197 23.27C197 23.27 84.51 -29.09 17.46 23.27Z" stroke="#979797" stroke-opacity="0" stroke-width="0.000000" />
-							</svg>
-							<img data-watch class="hero__main-image" src="img/hero/01.webp" alt="Image">
-							<svg data-watch class="hero__deco hero__deco--one" viewBox="0 0 232.272 194.42" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<desc>
-									Created with Pixso.
-								</desc>
-								<defs />
-								<g opacity="0.372070" style="mix-blend-mode:normal">
-									<path id="Stroke 1" d="M144.14 106.25L160.53 151.46" stroke="#020303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 2" d="M148.14 106.04L164.53 151.25" stroke="#020303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 3" d="M153.03 103.78L169.41 148.99" stroke="#020303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 4" d="M156.92 101.58L173.3 146.78" stroke="#020303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 5" d="M160.86 100.37L177.25 145.57" stroke="#020303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 6" d="M165.8 99.11L182.19 144.31" stroke="#020302" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 7" d="M169.69 96.9L186.08 142.11" stroke="#020302" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 8" d="M174.63 95.64L191.02 140.85" stroke="#020302" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 9" d="M177.52 93.49L193.91 138.69" stroke="#020302" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 10" d="M181.46 92.28L197.85 137.48" stroke="#020202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 11" d="M186.35 90.02L202.74 135.22" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 12" d="M191.34 89.76L207.73 134.96" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 13" d="M196.23 87.5L212.62 132.7" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 14" d="M199.12 85.35L215.51 130.55" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 17" d="M166.097 103.252C167.736 97.6911 168.429 91.8746 168.119 85.9684C167.136 67.2068 156.112 50.7757 139.675 42.7208C132.064 38.988 123.645 37.2349 115.014 37.6872C87.9584 39.1051 66.8877 61.8318 67.1902 89.1038C67.1931 89.7617 67.2159 90.4615 67.2574 91.2543C68.7319 119.389 92.5011 141.007 120.352 139.547C130.311 139.026 139.687 135.605 147.551 129.779C156.408 123.22 162.948 113.897 166.097 103.252ZM167 86.0271C166.039 67.6814 155.26 51.6154 139.186 43.7387C131.744 40.0889 123.514 38.375 115.073 38.8174C88.6182 40.2038 68.0149 62.4263 68.3107 89.096C68.3136 89.7377 68.3358 90.4199 68.3766 91.1957C69.8182 118.706 93.0599 139.845 120.293 138.417C130.032 137.907 139.198 134.562 146.887 128.866C155.549 122.452 161.944 113.335 165.023 102.928C166.626 97.4907 167.303 91.8035 167 86.0271Z" clip-rule="evenodd" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Stroke 19" d="M24.12 117.55L23.52 116.59L149.91 35.85L150.52 36.81L24.12 117.55Z" fill="#010202" fill-opacity="1.000000" fill-rule="nonzero" />
-									<path id="Fill 21" d="M182.66 76.82L178.54 78.41L149.86 5.19L153.98 3.6L182.66 76.82Z" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Stroke 23" d="M12.5754 70.0928C17.8147 69.8182 21.8392 65.3483 21.5647 60.1087C21.29 54.8691 16.8203 50.8443 11.5811 51.1189C6.34155 51.3935 2.31616 55.8636 2.5907 61.1031C2.86523 66.3425 7.33594 70.3674 12.5754 70.0928ZM11.6377 52.1994C16.2803 51.9561 20.2408 55.5225 20.4843 60.1653C20.7275 64.8082 17.1614 68.769 12.5188 69.0123C7.87598 69.2556 3.91443 65.6891 3.67114 61.0464C3.42786 56.4038 6.99487 52.4427 11.6377 52.1994Z" clip-rule="evenodd" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Fill 25" d="M42.08 88.57C42.25 91.88 39.71 94.7 36.4 94.87C33.09 95.05 30.27 92.51 30.09 89.2C29.92 85.89 32.46 83.06 35.77 82.89C39.08 82.72 41.9 85.26 42.08 88.57Z" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Fill 27" d="M62.56 58.96C62.92 65.85 57.62 71.73 50.73 72.09C43.83 72.46 37.95 67.16 37.59 60.27C37.23 53.37 42.52 47.49 49.42 47.13C56.31 46.77 62.19 52.06 62.56 58.96Z" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Stroke 29" d="M128.414 188.192L229.247 125.025L157.89 99.528L128.414 188.192ZM226.688 125.304L130.458 185.587L158.587 100.97L226.688 125.304Z" clip-rule="evenodd" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Fill 31" d="M166.04 103.66C163.03 114.34 156.77 123.59 148.39 130.06L157.71 100.53L166.04 103.66Z" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-								</g>
-							</svg>
-							<svg data-watch class="hero__deco hero__deco--two" viewBox="0 0 238.104 276.288" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<desc>
-									Created with Pixso.
-								</desc>
-								<defs />
-								<g opacity="0.402088" style="mix-blend-mode:normal">
-									<path id="Stroke 1" d="M215.45 130.36L145.95 22.7" stroke="#231F20" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 3" d="M208.45 134.36L138.95 26.7" stroke="#201C1D" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 4" d="M203.45 138.36L133.95 30.7" stroke="#1E1A1C" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 5" d="M196.45 141.36L126.95 33.7" stroke="#1C191A" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 6" d="M190.45 145.36L120.95 37.7" stroke="#1B1819" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 7" d="M184.45 149.36L114.95 41.7" stroke="#191718" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 8" d="M178.45 154.36L108.95 46.7" stroke="#181617" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 9" d="M172.45 159.36L102.95 51.7" stroke="#171516" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 10" d="M166.45 162.36L96.95 54.7" stroke="#161415" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 11" d="M160.45 166.36L90.95 58.7" stroke="#151314" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 12" d="M153.45 170.36L83.95 62.7" stroke="#151213" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 13" d="M147.45 174.36L77.95 66.7" stroke="#131111" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 14" d="M141.45 178.36L71.95 70.7" stroke="#110F0F" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 15" d="M135.45 182.36L65.95 74.7" stroke="#0F0D0D" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 16" d="M129.45 186.36L59.95 78.7" stroke="#0C0A0A" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 17" d="M123.45 191.36L53.95 83.7" stroke="#080607" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 18" d="M116.45 195.36L46.95 87.7" stroke="#030303" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 19" d="M110.45 199.36L40.95 91.7" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Fill 20" d="M196.46 48.41L180.41 108.3L139.87 85.74L196.46 48.41Z" fill="#DFCCC2" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Stroke 21" d="M180.41 108.3L139.87 85.74L196.46 48.41L180.41 108.3Z" stroke="#010202" stroke-opacity="1.000000" stroke-width="1.000000" />
-									<path id="Stroke 22" d="M114.915 186.346C109.841 205.284 121.079 224.75 140.018 229.824C158.956 234.899 178.422 223.66 183.496 204.722C188.57 185.784 177.332 166.318 158.394 161.244C139.456 156.169 119.99 167.408 114.915 186.346ZM182.209 204.377C177.325 222.604 158.59 233.421 140.363 228.537C122.135 223.653 111.319 204.918 116.203 186.691C121.087 168.464 139.822 157.647 158.049 162.531C176.276 167.415 187.093 186.15 182.209 204.377Z" clip-rule="evenodd" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-									<path id="Stroke 24" d="M26.23 132.85L26.26 131.52C26.42 131.52 26.73 131.53 27.16 131.56C27.87 131.61 28.68 131.67 29.56 131.77C34.69 132.35 39.91 133.63 44.54 135.85C51.65 139.27 56.31 144.47 57.54 151.75C59.04 160.61 55.35 172.06 45.64 186.44C36.18 200.43 32.79 211.9 34.52 221.08C35.93 228.52 40.64 234.24 47.83 238.46C53.32 241.69 59.53 243.68 65.29 244.71C65.79 244.81 66.24 244.88 66.62 244.93C66.85 244.97 67.01 244.99 67.09 245L66.93 246.32C66.84 246.31 66.67 246.29 66.43 246.25C66.03 246.19 65.57 246.12 65.05 246.03C59.15 244.96 52.8 242.93 47.15 239.61C39.66 235.21 34.7 229.19 33.21 221.33C31.41 211.76 34.89 199.95 44.53 185.69C54.07 171.58 57.66 160.44 56.23 151.97C55.07 145.16 50.71 140.29 43.96 137.05C39.49 134.9 34.41 133.66 29.41 133.1C28.55 133 27.77 132.93 27.08 132.89C26.67 132.87 26.38 132.85 26.23 132.85Z" fill="#010202" fill-opacity="1.000000" fill-rule="nonzero" />
-									<path id="Fill 26" d="M120.51 24.69L126.47 26.72L76.89 170.37L70.93 168.34L120.51 24.69Z" fill="#010202" fill-opacity="1.000000" fill-rule="evenodd" />
-								</g>
-							</svg>
+							<div class="hero__figure-item">
+								<img class="hero__figure" src="img/hero/figure.svg" alt="Image">
+							</div>
+							<div class="hero__main-image-item">
+								<img class="hero__main-image" src="img/hero/01.webp" alt="Image">
+							</div>
+							<div class="hero__deco-item hero__deco-item--one">
+								<img class="hero__deco" src="img/hero/abstract-1.svg" alt="Image">
+							</div>
+							<div class="hero__deco-item hero__deco-item--two">
+								<img class="hero__deco" src="img/hero/abstract-2.svg" alt="Image">
+							</div>
 						</div>
 						<div class="hero__content">
-							<img data-watch class="hero__circle-image" src="img/hero/02.webp" alt="Image">
-							<div data-watch class="hero__text">
-								<p>
-									Debonaire is natural product-based, hair design & boutique.
-								</p>
+							<div class="hero__circle-image-item">
+								<img class="hero__circle-image" src="img/hero/02.webp" alt="Image">
+							</div>
+							<div class="hero__text-item">
+								<div class="hero__text">
+									<p>
+										Debonaire is natural product-based, hair design & boutique.
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -125,7 +77,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250108123017"></script>
+	<script src="js/app.min.js?_v=20250108153203"></script>
 </body>
 
 </html>
