--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250108153203">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250109194737">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,31 +36,31 @@
 			</div>
 		</header>
 		<main class="page">
-			<section data-watch class="page__hero hero">
+			<section data-prlx-parent data-watch class="page__hero hero">
 				<div class="hero__container">
 					<div class="hero__body">
-						<div class="hero__title-item">
+						<div data-prlx class="hero__title-item">
 							<h1 class="hero__title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
 						</div>
 						<div class="hero__media">
-							<div class="hero__figure-item">
+							<div data-prlx class="hero__figure-item">
 								<img class="hero__figure" src="img/hero/figure.svg" alt="Image">
 							</div>
-							<div class="hero__main-image-item">
+							<div data-prlx class="hero__main-image-item">
 								<img class="hero__main-image" src="img/hero/01.webp" alt="Image">
 							</div>
-							<div class="hero__deco-item hero__deco-item--one">
+							<div data-prlx class="hero__deco-item hero__deco-item--one">
 								<img class="hero__deco" src="img/hero/abstract-1.svg" alt="Image">
 							</div>
-							<div class="hero__deco-item hero__deco-item--two">
+							<div data-prlx class="hero__deco-item hero__deco-item--two">
 								<img class="hero__deco" src="img/hero/abstract-2.svg" alt="Image">
 							</div>
 						</div>
 						<div class="hero__content">
-							<div class="hero__circle-image-item">
+							<div data-prlx class="hero__circle-image-item">
 								<img class="hero__circle-image" src="img/hero/02.webp" alt="Image">
 							</div>
-							<div class="hero__text-item">
+							<div data-prlx class="hero__text-item">
 								<div class="hero__text">
 									<p>
 										Debonaire is natural product-based, hair design & boutique.
@@ -77,7 +77,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250108153203"></script>
+	<script src="js/app.min.js?_v=20250109194737"></script>
 </body>
 
 </html>
