--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250109194737">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250114151242">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,11 +42,11 @@
 						<div data-prlx class="hero__title-item">
 							<h1 class="hero__title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
 						</div>
-						<div class="hero__media">
-							<div data-prlx class="hero__figure-item">
+						<div data-prlx class="hero__media">
+							<div data-prlx-smooth="50" class="hero__figure-item">
 								<img class="hero__figure" src="img/hero/figure.svg" alt="Image">
 							</div>
-							<div data-prlx class="hero__main-image-item">
+							<div data-prlx data-coefficient="2" class="hero__main-image-item">
 								<img class="hero__main-image" src="img/hero/01.webp" alt="Image">
 							</div>
 							<div data-prlx class="hero__deco-item hero__deco-item--one">
@@ -77,7 +77,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250109194737"></script>
+	<script src="js/app.min.js?_v=20250114151242"></script>
 </body>
 
 </html>
