--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250114151242">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250115140811">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
 				<div class="hero__container">
 					<div class="hero__body">
 						<div data-prlx class="hero__title-item">
-							<h1 class="hero__title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
+							<h1 class="hero__title title">Hi, we are Debonaire. Ready to create an art form on your body.</h1>
 						</div>
 						<div data-prlx class="hero__media">
 							<div data-prlx-smooth="50" class="hero__figure-item">
@@ -61,12 +61,48 @@
 								<img class="hero__circle-image" src="img/hero/02.webp" alt="Image">
 							</div>
 							<div data-prlx class="hero__text-item">
-								<div class="hero__text">
+								<div class="hero__text text">
 									<p>
 										Debonaire is natural product-based, hair design & boutique.
 									</p>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__focused focused">
+				<div class="focused__container">
+					<div class="focused__content">
+						<img class="focused__image" src="img/focused/01.webp" alt="Image">
+						<div class="focused__body">
+							<div class="focused__title title">
+								<p>
+									We’re focused.
+								</p>
+							</div>
+							<div class="focused__text text">
+								<p>
+									We provide an exceptional service by only focusing on hair designing. Our goal is to provide a
+									different
+									type of experience by using responsible products.
+								</p>
+							</div>
+						</div>
+						<img class="focused__image" src="img/focused/02.webp" alt="Image">
+					</div>
+					<div class="focused__decor-items">
+						<div class="focused__decor-item">
+							<svg class="focused__decor-valve" viewBox="0 0 348.008 344.037" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<path id="vector-2" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
+								<path id="vector-2" d="M219.43 96.57C248.92 222.31 373.8 190.53 342.01 294.63C310.21 398.72 -54.29 329.07 8.38 141.15C71.05 -46.78 189.94 -29.18 219.43 96.57Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
+							</svg>
+						</div>
+						<div class="focused__decor-item">
+							<svg class="focused__decor-item" viewBox="0 0 494.03 371.019" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<path id="vector-3" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
+								<path id="vector-3" d="M338.86 77.48C277.38 180.97 108.59 105.65 19.26 180.97C-70.06 256.3 189.54 469.11 338.86 315.8C488.19 162.5 503.8 80.56 488.19 36.18C472.57 -8.21 400.35 -26.02 338.86 77.48Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
+							</svg>
 						</div>
 					</div>
 				</div>
@@ -77,7 +113,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250114151242"></script>
+	<script src="js/app.min.js?_v=20250115140811"></script>
 </body>
 
 </html>
