--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250115140811">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250128091355">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,38 +71,35 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__focused focused">
+			<section data-prlx-parent class="page__focused focused">
 				<div class="focused__container">
 					<div class="focused__content">
-						<img class="focused__image" src="img/focused/01.webp" alt="Image">
-						<div class="focused__body">
-							<div class="focused__title title">
-								<p>
-									We’re focused.
-								</p>
+						<div class="focused__picturte focused__picturte--start">
+							<img data-prlx data-coefficient="3" class="focused__image" src="img/focused/01.webp" alt="Image">
+							<div data-watch class="focused__decor-item focused__decor-item--start">
+								<svg data-prlx class="focused__decor-valve" viewBox="0 0 348.008 344.037" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+									<path id="vector-2" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
+									<path id="vector-2" d="M219.43 96.57C248.92 222.31 373.8 190.53 342.01 294.63C310.21 398.72 -54.29 329.07 8.38 141.15C71.05 -46.78 189.94 -29.18 219.43 96.57Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
+								</svg>
 							</div>
+						</div>
+						<div data-prlx class="focused__body">
+							<h2 class="focused__title title">We’re focused.</h2>
 							<div class="focused__text text">
 								<p>
 									We provide an exceptional service by only focusing on hair designing. Our goal is to provide a
-									different
-									type of experience by using responsible products.
+									different type of experience by using responsible products.
 								</p>
 							</div>
 						</div>
-						<img class="focused__image" src="img/focused/02.webp" alt="Image">
-					</div>
-					<div class="focused__decor-items">
-						<div class="focused__decor-item">
-							<svg class="focused__decor-valve" viewBox="0 0 348.008 344.037" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<path id="vector-2" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
-								<path id="vector-2" d="M219.43 96.57C248.92 222.31 373.8 190.53 342.01 294.63C310.21 398.72 -54.29 329.07 8.38 141.15C71.05 -46.78 189.94 -29.18 219.43 96.57Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
-							</svg>
-						</div>
-						<div class="focused__decor-item">
-							<svg class="focused__decor-item" viewBox="0 0 494.03 371.019" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<path id="vector-3" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
-								<path id="vector-3" d="M338.86 77.48C277.38 180.97 108.59 105.65 19.26 180.97C-70.06 256.3 189.54 469.11 338.86 315.8C488.19 162.5 503.8 80.56 488.19 36.18C472.57 -8.21 400.35 -26.02 338.86 77.48Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
-							</svg>
+						<div class="focused__picturte focused__picturte--end">
+							<img data-prlx data-coefficient="2" class="focused__image" src="img/focused/02.webp" alt="Image">
+							<div data-watch class="focused__decor-item focused__decor-item--end">
+								<svg data-prlx class="focused__decor-valve" viewBox="0 0 494.03 371.019" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+									<path id="vector-3" d="" fill="#D8D8D8" fill-opacity="0" fill-rule="nonzero" />
+									<path id="vector-3" d="M338.86 77.48C277.38 180.97 108.59 105.65 19.26 180.97C-70.06 256.3 189.54 469.11 338.86 315.8C488.19 162.5 503.8 80.56 488.19 36.18C472.57 -8.21 400.35 -26.02 338.86 77.48Z" stroke="#E8E8E6" stroke-opacity="1.000000" stroke-width="2.000000" />
+								</svg>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -113,7 +110,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250115140811"></script>
+	<script src="js/app.min.js?_v=20250128091355"></script>
 </body>
 
 </html>
