--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250128091355">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250203192055">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,13 +104,50 @@
 					</div>
 				</div>
 			</section>
+			<section data-prlx-parent class="page__love love">
+				<div class="love__content">
+					<div class="love__picture">
+						<img data-prlx data-coefficient="2" class="love__image" src="img/love/01.webp" alt="Image">
+						<div class="love__decore-picture">
+							<img data-prlx class="love__item-decore-picture" src="img/love/deco-01.svg" alt="Image">
+						</div>
+					</div>
+					<div data-prlx class="love__body">
+						<h2 class="love__title title title--big">
+							We love what we do. We are up to the task.
+						</h2>
+						<div class="love__text text">
+							<p>
+								Cuts tailor made for your hair, making it easy for you to recreate your look every day. Debonaire team,
+								makes you feel happy at ease and work with you to make you your most lovely.
+							</p>
+						</div>
+					</div>
+					<div class="love__decor decor-love">
+						<div class="decor-love__body">
+							<div data-prlx data-coefficient="2" class="decor-love__line-item">
+								<svg data-watch class="decor-love__line" viewBox="0 0 522.723 532.185" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+									<path id="vector-4" d="M521.34 319.24C511.44 82.26 168.28 -119.05 32.91 85.79C-102.46 290.62 233.24 211.84 283.87 409.05C334.49 606.26 531.25 556.22 521.34 319.24Z" fill="#D8D8D8" fill-opacity="0" fill-rule="evenodd" />
+									<path id="vector-4" d="M32.91 85.79C-102.46 290.62 233.24 211.84 283.87 409.05C334.49 606.26 531.25 556.22 521.34 319.24C511.44 82.26 168.28 -119.05 32.91 85.79Z" stroke="#E6E6E6" stroke-opacity="1.000000" stroke-width="2.000000" />
+								</svg>
+							</div>
+							<div class="decor-love__hair-item">
+								<img data-prlx data-coefficient="1.8" class="decor-love__hair" src="img/love/03.webp" alt="Image">
+							</div>
+							<div class="decor-love__dryer-item">
+								<img data-prlx data-coefficient="1.3" class="decor-love__dryer" src="img/love/02.webp" alt="Image">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250128091355"></script>
+	<script src="js/app.min.js?_v=20250203192055"></script>
 </body>
 
 </html>
