--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250203192055">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250218205942">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,10 +71,10 @@
 					</div>
 				</div>
 			</section>
-			<section data-prlx-parent class="page__focused focused">
+			<section class="page__focused focused">
 				<div class="focused__container">
 					<div class="focused__content">
-						<div class="focused__picturte focused__picturte--start">
+						<div data-prlx-parent class="focused__picturte focused__picturte--start">
 							<img data-prlx data-coefficient="3" class="focused__image" src="img/focused/01.webp" alt="Image">
 							<div data-watch class="focused__decor-item focused__decor-item--start">
 								<svg data-prlx class="focused__decor-valve" viewBox="0 0 348.008 344.037" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -83,16 +83,16 @@
 								</svg>
 							</div>
 						</div>
-						<div data-prlx class="focused__body">
-							<h2 class="focused__title title">We’re focused.</h2>
-							<div class="focused__text text">
+						<div data-prlx-parent class="focused__body">
+							<h2 data-prlx class="focused__title title">We’re focused.</h2>
+							<div data-prlx class="focused__text text">
 								<p>
 									We provide an exceptional service by only focusing on hair designing. Our goal is to provide a
 									different type of experience by using responsible products.
 								</p>
 							</div>
 						</div>
-						<div class="focused__picturte focused__picturte--end">
+						<div data-prlx-parent class="focused__picturte focused__picturte--end">
 							<img data-prlx data-coefficient="2" class="focused__image" src="img/focused/02.webp" alt="Image">
 							<div data-watch class="focused__decor-item focused__decor-item--end">
 								<svg data-prlx class="focused__decor-valve" viewBox="0 0 494.03 371.019" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -104,26 +104,26 @@
 					</div>
 				</div>
 			</section>
-			<section data-prlx-parent class="page__love love">
+			<section class="page__love love">
 				<div class="love__content">
-					<div class="love__picture">
+					<div data-prlx-parent class="love__picture">
 						<img data-prlx data-coefficient="2" class="love__image" src="img/love/01.webp" alt="Image">
 						<div class="love__decore-picture">
 							<img data-prlx class="love__item-decore-picture" src="img/love/deco-01.svg" alt="Image">
 						</div>
 					</div>
-					<div data-prlx class="love__body">
-						<h2 class="love__title title title--big">
+					<div data-prlx-parent class="love__body">
+						<h2 data-prlx class="love__title title title--big">
 							We love what we do. We are up to the task.
 						</h2>
-						<div class="love__text text">
+						<div data-prlx class="love__text text">
 							<p>
 								Cuts tailor made for your hair, making it easy for you to recreate your look every day. Debonaire team,
 								makes you feel happy at ease and work with you to make you your most lovely.
 							</p>
 						</div>
 					</div>
-					<div class="love__decor decor-love">
+					<div data-prlx-parent class="love__decor decor-love">
 						<div class="decor-love__body">
 							<div data-prlx data-coefficient="2" class="decor-love__line-item">
 								<svg data-watch class="decor-love__line" viewBox="0 0 522.723 532.185" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -141,13 +141,51 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__services services">
+				<div class="services__container">
+					<h2 class="services__title title">Our Services</h2>
+					<div class="services__body">
+						<div class="services__items">
+							<article class="services__item item-service">
+								<a href="#" class="item-service__link-image">
+									<img class="item-service__image" src="img/services/01.webp" alt="Image">
+								</a>
+								<h5 class="item-service__name title title-min">
+									<a href="#" class="item-service__link-name">Cut.</a>
+								</h5>
+							</article>
+							<article class="services__item item-service">
+								<h5 class="item-service__name title title-min">
+									<a href="#" class="item-service__link-name">Color.</a>
+								</h5>
+								<a href="#" class="item-service__link-image">
+									<img class="item-service__image" src="img/services/02.webp" alt="Image">
+								</a>
+								<img src="img/services/deco-1.svg" class="item-service__figure" alt="Image">
+							</article>
+							<article class="services__item item-service">
+								<a href="#" class="item-service__link-image">
+									<img class="item-service__image" src="img/services/03.webp" alt="Image">
+								</a>
+								<h5 class="item-service__name title title-min">
+									<a href="#" class="item-service__link-name">Design.</a>
+								</h5>
+							</article>
+						</div>
+						<div class="services__content">
+							<h4 class="item-service__title title title">We create a customized new look for you.</h4>
+							<a href="#" class="item-service__link book"><span>See Our Menu</span></a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250203192055"></script>
+	<script src="js/app.min.js?_v=20250218205942"></script>
 </body>
 
 </html>
