--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250218205942">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250224113703">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -141,40 +141,39 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__services services">
+			<section data-prlx-parent class="page__services services">
 				<div class="services__container">
-					<h2 class="services__title title">Our Services</h2>
+					<h2 data-prlx class="services__title title">Our Services</h2>
 					<div class="services__body">
 						<div class="services__items">
-							<article class="services__item item-service">
-								<a href="#" class="item-service__link-image">
-									<img class="item-service__image" src="img/services/01.webp" alt="Image">
+							<article data-prlx class="services__item item-service">
+								<a href="#" class="item-service__link">
+									<img data-prlx data-coefficient="2" src="img/services/01.webp" alt="Image" class="item-service__image">
+									<h5 data-prlx class="item-service__name title title-min">Cut.</h5>
 								</a>
-								<h5 class="item-service__name title title-min">
-									<a href="#" class="item-service__link-name">Cut.</a>
-								</h5>
 							</article>
-							<article class="services__item item-service">
-								<h5 class="item-service__name title title-min">
-									<a href="#" class="item-service__link-name">Color.</a>
-								</h5>
-								<a href="#" class="item-service__link-image">
-									<img class="item-service__image" src="img/services/02.webp" alt="Image">
+							<article data-prlx class="services__item item-service">
+								<a href="#" class="item-service__link">
+									<h5 data-prlx class="item-service__name title title-min">Color.</h5>
+									<img data-prlx data-coefficient="2" src="img/services/02.webp" alt="Image" class="item-service__image">
 								</a>
-								<img src="img/services/deco-1.svg" class="item-service__figure" alt="Image">
+								<div class="item-service__figure-item">
+									<img data-prlx src="img/services/deco-1.svg" class="item-service__figure" alt="Image">
+								</div>
 							</article>
-							<article class="services__item item-service">
-								<a href="#" class="item-service__link-image">
-									<img class="item-service__image" src="img/services/03.webp" alt="Image">
+							<article data-prlx class="services__item item-service">
+								<a href="#" class="item-service__link">
+									<img data-prlx data-coefficient="2" src="img/services/03.webp" alt="Image" class="item-service__image">
+									<h5 data-prlx class="item-service__name title title-min">Design.</h5>
 								</a>
-								<h5 class="item-service__name title title-min">
-									<a href="#" class="item-service__link-name">Design.</a>
-								</h5>
+								<div class="item-service__deco-item">
+									<img data-prlx src="img/services/deco-2.svg" class="item-service__deco" alt="Image">
+								</div>
 							</article>
 						</div>
-						<div class="services__content">
-							<h4 class="item-service__title title title">We create a customized new look for you.</h4>
-							<a href="#" class="item-service__link book"><span>See Our Menu</span></a>
+						<div data-prlx class="services__content content-services">
+							<h4 data-prlx class="content-services__title title">We create a customized new look for you.</h4>
+							<a href="#" data-prlx class="content-services__link book"><span>See Our Menu</span></a>
 						</div>
 					</div>
 				</div>
@@ -185,7 +184,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250218205942"></script>
+	<script src="js/app.min.js?_v=20250224113703"></script>
 </body>
 
 </html>
