--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250225123434">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250228123204">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -178,13 +178,58 @@
 					</div>
 				</div>
 			</section>
+			<section data-prlx-parent class="page__passion passion">
+				<div class="passion__container">
+					<div data-prlx class="passion__content">
+						<h2 class="passion__title title title--big">We work with passion.</h2>
+						<div class="passion__text text">
+							<p> Our specialists are waiting to give you the treatments and services that you deserve.</p>
+						</div>
+					</div>
+					<div data-prlx class="passion__important-item">
+						<div class="passion__important">
+							AND THE MOST IMPORTANT PART
+						</div>
+					</div>
+				</div>
+				<div class="passion__image-item">
+					<img src="img/passion/01.webp" class="passion__image ibg" alt="Image">
+				</div>
+			</section>
+			<section data-prlx-parent class="page__best best">
+				<div class="best__container">
+					<div class="best__content">
+						<div class="best__item item-best">
+							<img data-prlx data-coefficient="2" class="item-best__image" src="img/best/01.webp" alt="Image">
+						</div>
+						<div data-prlx class="best__item item-best">
+							<img class="item-best__image" src="img/best/02.webp" alt="Image">
+							<div data-watch class="item-best__deco-item">
+								<img class="item-best__deco" src="img/best/deco-01.svg" alt="Image">
+							</div>
+							<div data-watch class="item-best__figure-item">
+								<img class="item-best__figure" src="img/best/deco-02.svg" alt="Image">
+							</div>
+						</div>
+						<div class="best__item item-best">
+							<img data-prlx data-coefficient="2" class="item-best__image" src="img/best/03.webp" alt="Image">
+							<div class="item-best__body">
+								<h2 class="item-best__title title">
+									Let’s make you your best self.
+								</h2>
+								<a href="#" class="item-best__link book"><span>Book an Appoitment</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250225123434"></script>
+	<script src="js/app.min.js?_v=20250228123204"></script>
 </body>
 
 </html>
