--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20250228123204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250304130613">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -186,8 +186,8 @@
 							<p> Our specialists are waiting to give you the treatments and services that you deserve.</p>
 						</div>
 					</div>
-					<div data-prlx class="passion__important-item">
-						<div class="passion__important">
+					<div class="passion__important-item">
+						<div data-prlx class="passion__important">
 							AND THE MOST IMPORTANT PART
 						</div>
 					</div>
@@ -213,7 +213,7 @@
 						</div>
 						<div class="best__item item-best">
 							<img data-prlx data-coefficient="2" class="item-best__image" src="img/best/03.webp" alt="Image">
-							<div class="item-best__body">
+							<div data-prlx data-coefficient="1.5" class="item-best__body">
 								<h2 class="item-best__title title">
 									Let’s make you your best self.
 								</h2>
@@ -226,10 +226,34 @@
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__content">
+					<ul class="footer__menu menu-footer">
+						<li class="menu-footer__item">
+							<a href="#" target="_blank" class="menu-footer__link">Terms of Service
+							</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="#" target="_blank" class="menu-footer__link">Privacy Policy</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="#" target="_blank" class="menu-footer__link">Instagram
+							</a>
+						</li>
+						<li class="menu-footer__item">
+							<a href="#" target="_blank" class="menu-footer__link">Facebook</a>
+						</li>
+					</ul>
+					<div class="footer__invite invite">
+						<div class="invite__title title title--min">
+							We invite you to join our team.
+						</div>
+						<a href="#" class="invite__link"><span>Apply Now</span></a>
+					</div>
+				</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250228123204"></script>
+	<script src="js/app.min.js?_v=20250304130613"></script>
 </body>
 
 </html>
